--- a/jdk8u-deterministic/build.gradle
+++ b/jdk8u-deterministic/build.gradle
@@ -8,7 +8,8 @@ repositories {
 }
 
 ext {
-    jdk_home = "$buildDir/jdk"
+    jdk_home = "$buildDir/jdk".toString()
+    rt_jar = "$jdk_home/jre/lib/rt.jar".toString()
 }
 
 configurations {
