--- a/core-deterministic/testing/common/build.gradle
+++ b/core-deterministic/testing/common/build.gradle
@@ -1,25 +1,7 @@
-apply plugin: 'kotlin'
-
-evaluationDependsOn(':jdk8u-deterministic')
-
-def jdkTask = project(':jdk8u-deterministic').assemble
-def deterministic_jdk_home = project(':jdk8u-deterministic').jdk_home
-def deterministic_rt_jar = project(':jdk8u-deterministic').rt_jar
+apply from: '../../../deterministic.gradle'
 
 dependencies {
     compileOnly project(path: ':core-deterministic', configuration: 'runtimeArtifacts')
     compileOnly project(path: ':serialization-deterministic', configuration: 'runtimeArtifacts')
     compileOnly "junit:junit:$junit_version"
-}
-
-tasks.withType(AbstractCompile) {
-    dependsOn jdkTask
-}
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs << '-bootclasspath' << deterministic_rt_jar
-}
-
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
-    kotlinOptions.jdkHome = deterministic_jdk_home
 }
